JWT and rooms.